# Infotainment-Accessibility-Evaluator

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  nginx.conf
backend/: Dockerfile  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_installation.py
backend/app/: main.py  models.py  orchestrator.py
backend/app/config/: model_map_premium.json  wcag22_thresholds.yaml
backend/app/providers/: __init__.py  anthropic_client.py  deepseek_client.py  openai_client.py  xai_client.py
backend/app/tests/: test_contrast.py  test_models.py  test_orchestrator_smoke.py
backend/app/utils/: __init__.py  chunking.py  color_contrast.py  css_utils.py  diffs.py  hashing.py
backend/models/: schemas.py
backend/routers/: analyze.py  cluster.py  patch.py  plan.py  progress.py  recheck.py  report.py  run.py  upload.py
backend/services/agents/: base_agent.py  super_agent.py
backend/services/clustering/: cluster_findings.py
backend/services/database/: __init__.py  upload_service.py
backend/services/llm/: anthropic_provider.py  deepseek_provider.py  openai_provider.py  provider_base.py
backend/services/parsing/: __init__.py  css_compute.py  dom_builder.py  file_parser.py
backend/services/patching/: __init__.py  contrast_patcher.py  patch_generator.py
backend/services/reporting/: csv_report.py  html_report.py  json_report.py  pdf_report.py
backend/tests/: test_main.py
backend/utils/: aria_maps.py  bcp47.py  color_math.py  config.py  contrast_ratio.py  file_safe.py  flash_metrics.py  id_gen.py  wcag_constants.py
(+75 files in other folders)
